force-app/main/default/objects/Transfer_Request_Item__c/Transfer_Request_Item__c.object-meta.xml
<CustomObject>
    <label>Transfer Request Item</label>
    <nameField>
        <displayFormat>TRI-{0000000000}</displayFormat>
        <label>Transfer Request Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>