force-app/main/default/objects/Transfer_Request_Item__c/fields/Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Request__c</fullName>
    <label>Transfer Request</label>
    <referenceTo>Transfer_Request__c</referenceTo>
    <relationshipLabel>Transfer Request Items</relationshipLabel>
    <relationshipName>Transfer_Request_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>