force-app/main/default/objects/Transfer_Request_Item__c/fields/TransferFromContact__c.field-meta.xml
<CustomField>
    <fullName>TransferFromContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer from Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transfer Request Items (Contact)</relationshipLabel>
    <relationshipName>Transfer_Request_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>