force-app/main/default/objects/Transfer_Request_Item__c/fields/TransferToContact__c.field-meta.xml
<CustomField>
    <fullName>TransferToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transfer Request Items</relationshipLabel>
    <relationshipName>Transfer_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>