force-app/main/default/objects/Transfer_Request_Item__c/fields/TransferToEmail__c.field-meta.xml
<CustomField>
    <fullName>TransferToEmail__c</fullName>
    <label>Transfer to Email</label>
    <type>Email</type>
</CustomField>